Prevent java 25 warnings.